# serde-gen-workers

./: .gitignore  Cargo.toml  README.md  wrangler.toml
frontend/: .editorconfig  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
src/: lib.rs
