[package]
name = "serde-gen-workers"
version = "0.1.0"
authors = ["Jihyun Yu <yjh0502@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
worker = "0.0.9"
serde_json = "1.0.81"
serde-gen = { git = "https://github.com/yjh0502/serde-gen" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
mime_guess = "2.0.4"
include_dir = "0.7.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
